Logo Added and More Navigations

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" sizes="192x192" href="./assets/img/diadem.jpg">
+  <link rel="icon" sizes="192x192" href="./assets/img/logo-rd.svg">
 
   <!--=============== BOXICONS ===============-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -31,36 +31,36 @@
           </li>
 
           <li class="nav__item">
+            <a href="#blog" class="nav__link">
+              <i class='bx bx-detail nav__icon'></i>
+              <span class="nav__name">Blog</span>
+            </a>
+          </li>
+
+          <li class="nav__item">
             <a href="#about" class="nav__link">
               <i class='bx bx-user nav__icon'></i>
               <span class="nav__name">About</span>
             </a>
           </li>
 
-          <!-- <li class="nav__item">
-            <a href="#skills" class="nav__link">
-              <i class='bx bx-book-alt nav__icon'></i>
-              <span class="nav__name">Skills</span>
+          <li class="nav__item">
+            <a href="#contact" class="nav__link">
+              <i class='bx bx-message-square-detail nav__icon'></i>
+              <span class="nav__name">Contact</span>
             </a>
-          </li> -->
-
-          <!-- <li class="nav__item">
-            <a href="#portfolio" class="nav__link">
-              <i class='bx bx-briefcase-alt nav__icon'></i>
-              <span class="nav__name">Portfolio</span>
-            </a>
-          </li> -->
+          </li>
 
           <li class="nav__item">
-            <a href="#contactme" class="nav__link">
-              <i class='bx bx-message-square-detail nav__icon'></i>
-              <span class="nav__name">Contacts</span>
+            <a href="editor.html " class="nav__link">
+              <i class='bx bx-pen nav__icon'></i>
+              <span class="nav__name">Editor</span>
             </a>
           </li>
         </ul>
       </div>
 
-      <img src="assets/img/diadem.jpg" alt="" class="nav__img">
+      <img src="assets/img/logo.svg" alt="" class="nav__img">
     </nav>
   </header>
 
@@ -68,7 +68,11 @@
     <!--=============== HOME ===============-->
     <section class="container section section__height" id="home">
       <h2 class="section__title">Home</h2>
-      <h3>We Are His Royal Diadems</h3>
+    </section>
+
+    <!--=============== BLOG ===============-->
+    <section class="container section section__height" id="blog">
+      <h2 class="section__title">Blog</h2>
     </section>
 
     <!--=============== ABOUT ===============-->
@@ -76,19 +80,9 @@
       <h2 class="section__title">About</h2>
     </section>
 
-    <!--=============== SKILLS ===============-->
-    <!-- <section class="container section section__height" id="skills">
-      <h2 class="section__title">Skills</h2>
-    </section> -->
-
-    <!--=============== PORTFOLIO ===============-->
-    <!-- <section class="container section section__height" id="portfolio">
-      <h2 class="section__title">Portfolio</h2>
-    </section> -->
-
-    <!--=============== CONTACTME ===============-->
-    <section class="container section section__height" id="contactme">
-      <h2 class="section__title">Contacts</h2>
+    <!--=============== CONTACT ===============-->
+    <section class="container section section__height" id="contact">
+      <h2 class="section__title">Contact</h2>
     </section>
   </main>
 
