CSS Files and JS Files Added

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
   <!--=============== CSS ===============-->
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/editor.css">
+  <link rel="stylesheet" href="assets/css/blog.css">
 
   <title>Royal Diadems</title>
 </head>
@@ -31,7 +33,7 @@
           </li>
 
           <li class="nav__item">
-            <a href="#blog" class="nav__link">
+            <a href="blog.html" class="nav__link">
               <i class='bx bx-detail nav__icon'></i>
               <span class="nav__name">Blog</span>
             </a>
@@ -87,8 +89,13 @@
   </main>
 
 
-  <!--=============== MAIN JS ===============-->
+  <!--=============== SCRIPTS ===============-->
+  <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-firestore.js"></script>
+  <script src="assets/js/firebase.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/home.js"></script>
+  <script src="assets/js/blog.js"></script>
 </body>
 
 </html>
