Authentication With Firebase

--- a/public/blog.html
+++ b/public/blog.html
@@ -62,7 +62,7 @@
                 <i class="ri-moon-line nav-icon" id="theme-button"></i>
                 <!-- Login button -->
                 <a href="./authentication.html">
-                <i class="bx bx-user nav-icon"></i>
+                    <i style="padding-top: 8px;" class="bx bx-user nav-icon" id="auth-button"></i>
                 </a>
             </div>
         </nav>
