--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="revisit-after" content="30 days">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" sizes="192x192" href="./assets/img/royal-diadems-logo.png">
   <!-- <link rel="icon" sizes="192x192" href="./assets/img/logo-rd.svg"> -->
@@ -82,7 +83,7 @@
         <i class="ri-moon-line nav-icon" id="theme-button"></i>
         <!-- Login button -->
         <a href="./authentication.html">
-          <i class="bx bx-user nav-icon"></i>
+          <i class="bx bx-user-x auth-icon" id="auth-button"></i>
         </a>
       </div>
     </nav>
