Theme correction and Auth Icon

--- a/public/index.html
+++ b/public/index.html
@@ -83,9 +83,8 @@
         <i class="ri-moon-line nav-icon" id="theme-button"></i>
         <!-- Login button -->
         <a href="./authentication.html">
-          <i class="bx bx-user-x auth-icon" id="auth-button"></i>
+          <i class="bx bx-user-check auth-icon" id="auth-button"></i>
         </a>
-      </div>
     </nav>
   </header>
 
@@ -476,9 +475,7 @@
   <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
 
-
   <script src="assets/js/firebase.js"></script>
-  
 
   <!--=============== SCRIPTS ===============-->
 
