Blog Section Redirection

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="assets/css/home.css">
   
-  <title>Royal Diadems</title>
+  <title>Home - Royal Diadems</title>
 </head>
 
 <body>
@@ -42,31 +42,31 @@
             </a>
           </li>
 
-          <li class="nav__item">
-            <a href="#blog" class="nav__link">
-              <i class='bx bx-detail nav__icon'></i>
-              <span class="nav__name">Blog</span>
-            </a>
-          </li>
-
-          <li class="nav__item">
+          <!-- <li class="nav__item">
             <a href="#about" class="nav__link">
               <i class='bx bx-user-pin nav__icon'></i>
               <span class="nav__name">About</span>
             </a>
-          </li>
+          </li> -->
           
-          <li class="nav__item" hidden>
+          <!-- <li class="nav__item" hidden>
             <a href="#shop" class="nav__link">
               <i class='bx bx-basket nav__icon'></i>
               <span class="nav__name">Shop</span>
             </a>
+          </li> -->
+
+          <li class="nav__item">
+            <a href="#about" class="nav__link">
+              <i class='bx bx-message-square-detail nav__icon'></i>
+              <span class="nav__name">Contact</span>
+            </a>
           </li>
 
           <li class="nav__item">
-            <a href="#contact" class="nav__link">
-              <i class='bx bx-message-square-detail nav__icon'></i>
-              <span class="nav__name">Contact</span>
+            <a href="https://royal-diadems.vercel.app/" class="nav__link">
+              <i class='bx bx-detail nav__icon'></i>
+              <span class="nav__name">Blog</span>
             </a>
           </li>
 
@@ -101,8 +101,8 @@
           <p class="home__description">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta a ab dolore cupiditate eius, quibusdam eligendi adipisci beatae quam aperiam sunt maiores, commodi quis et ullam dignissimos nemo id quidem.
           </p>
-          <a href="#about" class="button button--flex">
-            More About Us <i class="ri-arrow-right-down-line button__icon"></i>
+          <a href="https://royal-diadems.vercel.app/" class="button button--flex">
+            Checkout Our Blog <i class="ri-arrow-right-line button__icon"></i>
           </a>
         </div>
     
@@ -125,8 +125,8 @@
     </section>
 
     <!--=============== BLOG ===============-->
-    <section class="steps section container" id="blog">
-        <div class="steps__container grid" id="posts"></div>
+    <!-- <section class="steps section container" id="blog"> -->
+        <!-- <div class="steps__container grid" id="posts"></div> -->
         <!-- <div class="steps__container grid" id="posts">
           <div class="steps__card">
           <img class="img__blog" src="./assets/img/img1.png">
@@ -190,7 +190,7 @@
         </div>
         <br>
         </div> -->
-    </section>
+    <!-- </section> -->
 
     <!--=============== ABOUT ===============-->
     <section class="about section container" id="about">
